# agentic-ai-deployment-cookbook

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile_crewai.fastapi  Dockerfile_crewai_agent_with_server  Dockerfile_langgraph.fastapi  Dockerfile_langgraph_agent_as_mcp_server  Dockerfile_langgraph_agent_with_server  Dockerfile_simple_mcp_server  README.md  langgraph.json  pyproject.toml
notebooks/: research_report_generation_crewai.ipynb  research_report_generation_langgraph.ipynb
src/agents/crewai/: agent.py  agent_as_mcp_server.py  deploy.py  server.py
src/agents/crewai/notebooks/: agent_with_web_search.ipynb
src/agents/langgraph/: agent.py  agent_as_mcp_server.py  agent_hitl.py  agent_hitl_memory.py  deploy.py  server.py  server_hitl_memory.py
src/agents/langgraph/notebooks/: research_report_generation_langgraph.ipynb
src/crewai/: agent_fastapi.py  mcp_server.py  research_report_generation.py
src/langgraph/: agent_fastapi.py  mcp_server.py  research_report_generation.py
src/mcp_servers/simple_mcp_server/: deploy.py  server.py
