[project]
name = "research_report_generation"
version = "0.1.0"
description = "A research report generation system"
dependencies = [
    "crewai[tools]>=0.121.0",
    "crewai-tools==0.75.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.1",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.5",
    "reportlab>=4.4.1",
    "tavily-python>=0.7.12",
    "yfinance>=0.2.61",
    "jupyter>=1.1.1",
    "langchain-tavily>=0.2.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "fastapi>=0.119.0",
    "fastmcp>=2.12.4",
    "uvicorn>=0.34.3",
    "truefoundry>=0.12.1",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# This tells Hatchling to look for packages/modules in the root directory ('.')
packages = ["."]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
